--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -35,4 +35,12 @@
         </menu>
     </item>
 
+    <item android:title="Profile">
+        <menu>
+            <item android:id="@+id/nav_logout"
+            android:icon="@drawable/baseline_power_settings_new_black_18dp"
+            android:title="Logout"/>
+        </menu>
+    </item>
+
 </menu>
