--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#58a0ff</color>
+    <color name="colorPrimaryDark">#426bd3</color>
+    <color name="colorAccent">#2b87ff</color>
     <color name="white">#FFF</color>
     <color name="l_blue">#909BAA</color>
     <color name="d_blue">#6D7B92</color>
