--- a/app/src/main/res/layout/vertical_recycler_item.xml
+++ b/app/src/main/res/layout/vertical_recycler_item.xml
@@ -54,7 +54,7 @@
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Date:" />
+            android:text="Posted on : " />
 
         <TextView
             android:id="@+id/txtDate"
