--- a/app/src/main/res/layout/vertical_recycler_item.xml
+++ b/app/src/main/res/layout/vertical_recycler_item.xml
@@ -13,9 +13,15 @@
         android:layout_height="wrap_content"
         fresco:viewAspectRatio="1"
         fresco:placeholderImage="@drawable/video"
+        fresco:placeholderImageScaleType="fitXY"
+        fresco:progressBarImage="@android:drawable/stat_notify_sync_noanim"
+        fresco:progressBarImageScaleType="fitXY"
+        fresco:roundedCornerRadius="25dp"
+        fresco:roundingBorderWidth="3dp"
+        fresco:roundingBorderColor="@color/colorAccent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="5dp"
         android:layout_marginTop="24dp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="266dp"
+        android:layout_marginEnd="250dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="TextView"
@@ -42,16 +48,15 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="362dp"
-        android:layout_height="59dp"
-        android:layout_marginTop="9dp"
-        android:orientation="horizontal"
+        android:layout_height="115dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgView">
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/postedOnText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Posted on : " />
@@ -62,6 +67,19 @@
             android:layout_height="wrap_content"
 
             android:text="TextView" />
+
+        <TextView
+            android:id="@+id/numberOfPostsUserPostedProfileId"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/emailTextContactHintId"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/emailTextContactId"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
